--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "mongoose": "^4.4.17",
+    "mongoose": ">=5.7.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "socket.io": "^1.4.6"
+    "socket.io": ">=2.4.0"
   },
   "devDependencies": {},
   "scripts": {
